--- a/static/style.css
+++ b/static/style.css
@@ -7,27 +7,39 @@ body {
 
 .container {
   text-align: center;
+  width: 100%;
 }
 
-#scoreboard {
+h1 {
   margin-bottom: 20px;
-}
-
-#player-color {
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-#player-turn {
-  margin-bottom: 20px;
-  font-weight: bold;
 }
 
 .game-container {
   display: flex;
   justify-content: center;
   gap: 20px;
+  width: 100%;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 404px; /* 8 * 50px + 7 * 2px de gap */
+  background-color: #008060;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+}
+
+#scoreboard {
   margin-bottom: 20px;
+}
+
+#player-color, #player-turn, #message {
+  margin-bottom: 10px;
 }
 
 #game-board {
@@ -67,6 +79,10 @@ body {
   display: flex;
   flex-direction: column;
   width: 200px;
+  height: 404px; /* 8 * 50px + 7 * 2px de gap */
+  background-color: #008060;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 #chat-messages {
@@ -74,8 +90,11 @@ body {
   border: 1px solid #ccc;
   padding: 10px;
   margin-bottom: 10px;
-  height: 300px;
+  height: calc(100% - 72px); /* Ajustar a altura considerando o input e botão */
   overflow-y: auto;
+  background-color: #008060;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 #chat-input {
@@ -85,4 +104,24 @@ body {
 
 #chat-send {
   padding: 10px;
+}
+
+.chat-message {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.chat-message .timestamp {
+  margin-right: 5px;
+  font-size: 0.7em;  /* Reduzindo o tamanho do timestamp */
+  color: #800080;
+}
+
+.chat-message.black .message-content {
+  color: black;
+}
+
+.chat-message.white .message-content {
+  color: white;
 }
