--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,7 @@ h1 {
   align-items: center;
   justify-content: center;
   width: 200px;
-  height: 404px; /* 8 * 50px + 7 * 2px de gap */
+  height: 395px;
   background-color: #008060;
   padding: 10px;
   border-radius: 5px;
@@ -79,7 +79,7 @@ h1 {
   display: flex;
   flex-direction: column;
   width: 200px;
-  height: 404px; /* 8 * 50px + 7 * 2px de gap */
+  height: 395px;
   background-color: #008060;
   padding: 10px;
   border-radius: 5px;
@@ -90,7 +90,7 @@ h1 {
   border: 1px solid #ccc;
   padding: 10px;
   margin-bottom: 10px;
-  height: calc(100% - 72px); /* Ajustar a altura considerando o input e botão */
+  height: calc(100% - 72px);
   overflow-y: auto;
   background-color: #008060;
   display: flex;
@@ -114,7 +114,7 @@ h1 {
 
 .chat-message .timestamp {
   margin-right: 5px;
-  font-size: 0.7em;  /* Reduzindo o tamanho do timestamp */
+  font-size: 0.6em;
   color: #800080;
 }
 
